--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name="com.Branham.facebookcam2.SelectActivity"/>
     </application>
 
 </manifest>
