--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="13"
+        android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.CAMERA"/>
@@ -34,7 +34,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.Branham.facebookcam2.SelectActivity"/>
+        <activity 
+            android:name="com.Branham.facebookcam2.SelectActivity"
+          	android:parentActivityName="com.Branham.facebookcam2.MainActivity"/>
         <activity android:name="com.facebook.LoginActivity"/>
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
     </application>
