--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -37,9 +37,15 @@
         </activity>
         <activity 
             android:name="com.Branham.facebookcam2.SelectActivity"
-          	android:parentActivityName="com.Branham.facebookcam2.MainActivity"/>
+            android:parentActivityName="com.Branham.facebookcam2.MainActivity">
+            <meta-data 
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.Branham.facebookcam2.MainActivity"/>
+            </activity>
         <activity android:name="com.facebook.LoginActivity"/>
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/app_id"/>
+        <meta-data 
+            android:name="com.facebook.sdk.ApplicationId" 
+            android:value="@string/app_id"/>
     </application>
 
 </manifest>
