--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,23 @@
     <uses-feature android:name="android.hardware.camera.autofocus"/>
     <uses-feature android:name="android.hardware.microphone"/>
     
+    <compatible-screens >
+        <screen android:screenSize="small" android:screenDensity="ldpi" />
+        <screen android:screenSize="small" android:screenDensity="mdpi" />
+        <screen android:screenSize="small" android:screenDensity="hdpi" />
+        <screen android:screenSize="small" android:screenDensity="xhdpi" />
+        <screen android:screenSize="normal" android:screenDensity="ldpi" />
+        <screen android:screenSize="normal" android:screenDensity="mdpi" />
+        <screen android:screenSize="normal" android:screenDensity="hdpi" />
+        <screen android:screenSize="normal" android:screenDensity="xhdpi" />
+    </compatible-screens>
+    
+    <supports-screens android:resizeable="false"
+                  android:smallScreens="true"
+                  android:normalScreens="true"
+                  android:largeScreens="false"
+                  android:xlargeScreens="false"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
