Changed Name to Featherweight Camera

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FacebookCam2</name>
+	<name>Featherweight Camera</name>
 	<comment></comment>
 	<projects>
 	</projects>
