--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,7 +43,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.Branham.facebookcam2.MainActivity"
+            android:name="com.Branham.featherweightcamera.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -53,8 +53,8 @@
             </intent-filter>
         </activity>
         <activity 
-            android:name="com.Branham.facebookcam2.SelectActivity"
-            android:parentActivityName="com.Branham.facebookcam2.MainActivity">
+            android:name="com.Branham.featherweightcamera.SelectActivity"
+            android:parentActivityName="com.Branham.featherweightcamera.MainActivity">
             <meta-data 
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.Branham.facebookcam2.MainActivity"/>
