--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,7 +57,7 @@
             android:parentActivityName="com.Branham.featherweightcamera.MainActivity">
             <meta-data 
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.Branham.facebookcam2.MainActivity"/>
+                android:value="com.Branham.featherweightcamera.MainActivity"/>
             </activity>
         <activity android:name="com.facebook.LoginActivity"/>
         <meta-data 
